--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_svg: ^1.1.6
   get_it: ^7.2.0
   provider: ^6.0.5
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +29,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/audio/
     - assets/images/blocks/
     - assets/images/items/
     - assets/images/tools/
