--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   get_it: ^7.2.0
   provider: ^6.0.5
   audioplayers: ^0.20.1
+  shared_preferences: ^2.0.17
+  dartz: ^0.10.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
