--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
   shared_preferences: ^2.0.17
   dartz: ^0.10.1
   equatable: ^2.0.5
+  flutter_native_splash: ^2.2.17
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/png/logo.png
 
 dev_dependencies:
   flutter_test:
