--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mine_clicker">
    <application
-        android:label="mine_clicker"
+        android:label="Mine Clicker"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
