--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/png/logo.png
+  image: assets/images/others/pickaxe.png
 
 dev_dependencies:
   flutter_test:
@@ -42,3 +42,4 @@ flutter:
     - assets/images/items/
     - assets/images/tools/
     - assets/images/destroy_effect/
+    - assets/images/others/
